Changes from papeeria

--- a/UFO.tex
+++ b/UFO.tex
@@ -248,43 +248,43 @@ To analyze, we took the following steps:
             - Data cube - season, shape
                 
         \end{itemize}
-        \begin{figure}[htb]
+        \begin{figure}[t]
             \centering
                 \includegraphics[width=1.0\columnwidth]{images/continent}
             \caption{Sightings by Location - Continent}
             \label{fig:continent}
         \end{figure}
-        \begin{figure}[htb]
+        \begin{figure}[t]
             \centering
                 \includegraphics[width=1.0\columnwidth]{images/country}
             \caption{Sightings by Location - country}
             \label{fig:country}
         \end{figure}
-        \begin{figure}[htb]
+        \begin{figure}[t]
             \centering
                 \includegraphics[width=1.0\columnwidth]{images/year}
             \caption{Sightings Over Time}
             \label{fig:year}
         \end{figure}
-        \begin{figure}[htb]
+        \begin{figure}[t]
             \centering
                 \includegraphics[width=1.0\columnwidth]{images/sightings-season}
             \caption{Sightings Per Season}
             \label{fig:sight-season}
         \end{figure}
-        \begin{figure}[htb]
+        \begin{figure}[t]
             \centering
                 \includegraphics[width=1.0\columnwidth]{images/shape}
             \caption{Different UFO Shapes Sighted}
             \label{fig:shape}
         \end{figure}
-        \begin{figure}[htb]
+        \begin{figure}[t]
             \centering
                 \includegraphics[width=1.0\columnwidth]{images/shape-continent}
             \caption{Shapes Per Continent}
             \label{fig:shape-continent}
         \end{figure}
-        \begin{figure}[htb]
+        \begin{figure}[t]
             \centering
                 \includegraphics[width=1.0\columnwidth]{images/shapes-seasons}
             \caption{Shapes Per Seasons}
